# FundAI

./: .clangd  .envrc.example  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  flake.nix  justfile
.claude/commands/: new-issue.md  review.md  ticket.md
.github/workflows/: ci.yml
abi/: CLAUDE.md  CMakeLists.txt  Makefile  agent_action.h  cmake_install.cmake  fund_state.h
agents/: CLAUDE.md  base.py  config.py  types.py
agents/tests/: test_base.py
configs/examples/: tech-equity-pm.json
docs/design/: 000_overview.md  001_fund_os_architecture.md
fund/: CMakeLists.txt  config.hh  main.cc
fund/execution_engine/: CMakeLists.txt  Engine.cc  Engine.hh
fund/feed_handler/: CMakeLists.txt  factory.cc  feed_handler.hh  market_event.hh
fund/feed_handler/live/: live_feed_handler.cc  live_feed_handler.hh
fund/feed_handler/sim/: sim_feed_handler.cc  sim_feed_handler.hh
fund/feed_handler/tests/: feed_handler_test.cc
ipc/: CLAUDE.md  CMakeLists.txt  ring_buffer.c  ring_buffer.h  shared_memory.c  shared_memory.h
ipc/tests/: ring_buffer_test.cc  shared_memory_test.cc
scripts/: bootstrap.sh  build.sh
tests/integration/: CMakeLists.txt
tests/integration/shared_memory_test/: CMakeLists.txt  agent.py  fund.cc  run.sh
